[build-system]
requires = [
    "meson-python>=0.13.0",
    "pybind11>=2.10.0",
    "mako",
    "PyYAML"
]
build-backend = "mesonpy"

[project]
name = "python-mesa3d"
version = "0.1.0"
description = "Minimal Pybind11 bindings for Mesa NIR"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]

[tool.meson-python.args]
setup = [
  "-Dmesa_src_dir=/home/gonsolo/work/mesa",
  "-Dmesa_build_dir=/home/gonsolo/work/mesa/build" # Assuming your Meson build directory is 'build'
]
