[build-system]
requires = [
    "meson-python>=0.18.0",
    "pybind11>=3.0.0",
    "mako",
    "PyYAML"
]
build-backend = "mesonpy"

[project]
name = "python-mesa3d"
version = "0.1.0"
description = "Minimal Pybind11 bindings for Mesa NIR"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
